# FISR_code

./: README.md
Detailed-version/: CMakeLists.txt  Makefile  README.md  WaveletPipeRecon.code-workspace  WaveletPipeRecon.icproj  WaveletPipeRecon.sln  WaveletPipeRecon.vcproj  average.cpp  blur.cpp  build.sh  coeffs_daub4.cpp  coeffs_haar.cpp  common.h  config.txt  connectneighbors.cpp  eval_daub4.cpp  eval_haar.cpp  global.cpp  global.h  iterator.cpp  iterator_daub4.cpp  main.cpp  marchingcubes.cpp  matrix.cpp  matrix.h  normal.cpp  octnode.cpp  octtree.cpp  parse.cpp  parse.h  plane.cpp  prune.cpp  readpts.cpp  reconstruct.cpp  runiWSR.py  traverse.cpp
Detailed-version/data/mesh/: README.md
Detailed-version/data/sparse/: 3DBenchy.xyz  NAPOLEON.xyz  heels.xyz  johnwesley.xyz
Simplified-version/: README.md  output00.bobj  runIWSR.py
Simplified-version/data/sparse/: BS_4000_holes.xyz  BS_4000_torus.xyz  horse.xyz  kitten.xyz  tennyson.xyz
Simplified-version/result/: orientation.xyz
